# gas_test

./: pyproject.toml
tasks/: task_1.py  task_2.py  task_3.py  task_4.py  task_5.py  task_6.py
tasks/data_files/task_1/: file.csv  multiply_rows_with_same_id.csv  uniq_rows.csv
tasks/utils/: task_1.py
